--- a/index.html
+++ b/index.html
@@ -16,8 +16,38 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello World!</h1>
-      <a href="" class="btn btn-primary">Click me</a>
+      <div class="weather-app">
+        <div class="row">
+          <div class="col-2">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+              alt="party cloud"
+            />
+            27 °C | °F
+          </div>
+          <div class="col-3">
+            <ul>
+              <li>Chance of precipitation: 3%</li>
+              <li>Humidity: 55%</li>
+              <li>Wind: 13 km/h</li>
+            </ul>
+          </div>
+          <div class="col-3">
+            <h2>New York, USA</h2>
+            <ul>
+              <li>Friday 2:00 PM</li>
+              <li>Partly cloudy</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <small>
+        <a
+          href="https://github.com/Vedina2022/Vanilla-weather-app.git"
+          target="_blank"
+          >Open-sourse code</a
+        >, by Nadiia Kyshinska
+      </small>
     </div>
     <script src="src/app.js"></script>
   </body>
