--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="src/style.css" />
+
     <title>Weather App</title>
   </head>
   <body>
@@ -27,7 +28,7 @@
                   class="float-left"
                 />
                 <div class="float-left">
-                  <strong>27</strong>
+                  <strong id="temperature"></strong>
                   <span class="units"
                     >°C | <a href="#" class="fahrenheit">°F</a></span
                   >
@@ -36,16 +37,15 @@
             </div>
             <div class="col-sm">
               <ul class="discription">
-                <li>Chance of precipitation: 3%</li>
-                <li>Humidity: 55%</li>
-                <li>Wind: 13 km/h</li>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> km/h</li>
               </ul>
             </div>
             <div class="col-sm">
-              <h2>New York, USA</h2>
+              <h2 id="city"></h2>
               <ul class="date">
                 <li>Friday 2:00 PM</li>
-                <li>Partly cloudy</li>
+                <li id="description"></li>
               </ul>
             </div>
           </div>
