Update the current date and time

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="col-sm">
               <h2 id="city"></h2>
               <ul class="date">
-                <li>Friday 2:00 PM</li>
+                <li id="date"></li>
                 <li id="description"></li>
               </ul>
             </div>
