Added relevant icon from the API

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                   src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
                   alt="party cloud"
                   class="float-left"
+                  id="icon"
                 />
                 <div class="float-left">
                   <strong id="temperature"></strong>
