--- a/index.html
+++ b/index.html
@@ -19,6 +19,26 @@
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
+          <form id="search-form" class="mb-3">
+            <div class="row">
+              <div class="col-9">
+                <input
+                  type="serch"
+                  placeholder="Type a city..."
+                  class="form-control"
+                  id="city-input"
+                  autocomplete="off"
+                />
+              </div>
+              <div class="col-3">
+                <input
+                  type="submit"
+                  value="Search"
+                  class="btn btn-primary w-100"
+                />
+              </div>
+            </div>
+          </form>
           <div class="row">
             <div class="col-4">
               <div class="clearfix weather-temperature">
@@ -42,7 +62,7 @@
                 <li>Wind: <span id="wind"></span> km/h</li>
               </ul>
             </div>
-            <div class="col-sm">
+            <div class="col-3">
               <h2 id="city"></h2>
               <ul class="date">
                 <li id="date"></li>
