implemented the unit conversion

--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
                 />
                 <div class="float-left">
                   <strong id="temperature"></strong>
-                  <span class="units"
-                    >°C | <a href="#" class="fahrenheit">°F</a></span
+                  <span class="units">
+                    <a href="#" class="celsius" id="celsius-link">°C |</a>
+                    <a href="#" class="fahrenheit" id="fahrengeit-link"
+                      >°F</a
+                    ></span
                   >
                 </div>
               </div>
